# TODO

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/dependencies/: database.py  security.py  service.py  user.py
app/api/handlers/: api.py  task.py  user.py
app/core/: config.py  events.py
app/core/settings/: app.py  base.py  security.py
app/db/: events.py
app/db/models/: __init__.py  common.py  task.py  user.py
app/models/domain/: task.py  user.py
app/models/schemas/: task.py  user.py
app/pkg/: security.py
app/repositories/: task.py  user.py
app/services/: base.py  task.py  user.py
migrations/: 20240327055948_todo_table.up.sql  env.py
migrations/versions/: 13fe048db790_add_author_for_task.py  524bb969a023_unique_username.py  a433fdf54984_initial.py  e5339b71e963_add_status_in_task.py
src/: main.rs
src/core/: app.rs  db.rs  error.rs  mod.rs
src/todo/: handlers.rs  mod.rs  model.rs  routing.rs
